--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -28,3 +28,7 @@ body {
     border-radius: 4px; /* Agrega esquinas redondeadas al enlace */
     margin-left: 10px; /* Añade un margen a la izquierda del enlace */
 }
+
+li {
+    list-style-type: none;
+}
