--- a/templates/base.html
+++ b/templates/base.html
@@ -4,31 +4,72 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     <title>Task Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
-<header>
-    <a href="{% url 'home' %}">Home</a> 
-    <a href="{% url 'about' %}">About</a>
-    <a href="{% url 'tasks' %}">Pending tasks</a>
-    <a href="{% url 'completed_tasks' %}">Completed tasks</a>
+<header class="p-3 mb-3 border-bottom">
+    {% comment %} <a href="{% url 'home' %}">Home</a> {% endcomment %}
+    <div class="d-flex flex-wrap align-items-center justify-content-center
+    justify-content-lg-start">
+    <ul>
+    <li><a href="{% url 'home' %}">Home</a> </li>
+    <li><a href="{% url 'about' %}">About</a></li>
+    <li><a href="{% url 'tasks' %}">Pending tasks</a></li> 
+    <li><a href="{% url 'completed_tasks' %}">Completed tasks</a></li>
+    <li><a href="{% url 'create_task' %}">+ New task</a></li>
 
-    <div class="nav-right">
-        <a href="{% url 'create_task' %}">+ New task</a>
-    </div>
+    </ul>
+    
+    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center
+    mb-md-0">
+  {% if user.is_authenticated %}
+</ul>
+<div class="dropdown text-end">
+  <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
+    data-bs-toggle="dropdown" aria-expanded="false">
+    {{ user.username }}
+  </a>
+  <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+    <li><a class="dropdown-item" href="{% url 'password_change' %}">
+        Change password</a></li>
+    <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
+  </ul>
+</div>
+{% else %}
+</ul>
+<div class="text-end">
+  <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">
+    Log In</a>
+  <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
+</div>
+{% endif %}
+</div>
+</div>
+    
+    {% comment %} <a href="{% url 'about' %}">About</a> {% endcomment %}
+    {% comment %} <a href="{% url 'tasks' %}">Pending tasks</a>
+    <a href="{% url 'completed_tasks' %}">Completed tasks</a> {% endcomment %}
 
-    {% if user.is_authenticated %}
+    
+
+    {% comment %} {% if user.is_authenticated %}
     <p>Hi {{ user.username }}!</p>
     <p><a href="{% url 'logout' %}">Log out</a></p>
     {% else %}
     <p>You are not logged in.</p>
     <a href="{% url 'login' %}">Log In</a> |
     <a href="{% url 'signup' %}">Sign Up</a>
-    {% endif %}
+    {% endif %} {% endcomment %}
 
 </header>
+<main>
+    <div class="container">
+        {% block content %}
+        {% endblock content %}
+    </div>
+</main>
 
-{% block content %} {% endblock content %}
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
