--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -4,26 +4,31 @@
 <h1>Task Manager</h1>
 <ul>
     {% for task in task_list %}
-        <li><a href="{% url 'task_detail' task.id %}">Title: {{task.title}}</a></li>
-        <li>Task Date: {{task.date}}</li>
-        <li>Task Time: {{task.task_time}}</li>
-        <li>Description: {{task.details}}</li>
-        <li>Task id: {{task.id}}</li>
-        <li>{{task.is_completed}}</li>
-        <li>
-            Is Completed:
-            {% if task.id %}
-                <form method="post" action="{% url 'mark_completed' pk=task.id %}">
-                    {% csrf_token %}
-                    <div name="completed" {% if task.is_completed %}checked{% endif %}>
-                    <input type="submit" value="Mark as Completed">
-                </form>
-            {% else %}
-                <!-- Handle the case where task.id is None or empty -->
-                <p>Task ID is not valid.</p>
-            {% endif %}
-        </li>
-        
+    <div class="card">
+        <div class="card-header">
+            <li><a href="{% url 'task_detail' task.id %}">Title: {{task.title}}</a></li>
+        </div>
+        <div class="card-body">
+            <li>Task Date: {{task.date}}</li>
+            <li>Task Time: {{task.task_time}}</li>
+            <li>Description: {{task.details}}</li>
+            <li>Task id: {{task.id}}</li>
+            <li>{{task.is_completed}}</li>  
+        </div>
+        <div class="card-footer text-center text-muted">
+                {% if task.id %}
+                    <form method="post" action="{% url 'mark_completed' pk=task.id %}">
+                        {% csrf_token %}
+                        <div name="completed" {% if task.is_completed %}checked{% endif %}>
+                        <input type="submit" value="Mark as Completed">
+                    </form>
+                {% else %}
+                    <!-- Handle the case where task.id is None or empty -->
+                    <p>Task ID is not valid.</p>
+                {% endif %}
+        </div>
+    </div> 
+    <br />
     {% endfor %}
 </ul>
 {% endblock content %}
